--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
 
   flutter_riverpod:
+    path: ../river_pod/packages/flutter_riverpod/
   freezed_annotation:
 
   uuid:
